# stm32-f3-discovery-learn

./: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: main.rs
