[package]
name = "stm32-f3-discovery-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-rtt-target = "0.2.0"
#rtt-target = "0.6.2"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]

[dependencies.panic-probe]
version = "1.0.0"
features = ["print-defmt"]
